--- a/app/sass/sections/_header.scss
+++ b/app/sass/sections/_header.scss
@@ -136,6 +136,8 @@
     & > span {
       display: block;
       width: 100%;
+      border-radius: 0.3rem;
+
       height: 0.3rem;
       background-color: $v-dark-blue;
       transform-origin: 2.5px 2px;
