add both overflow to html and body to fix overlapping contents in mobile view

--- a/app/sass/_globals.scss
+++ b/app/sass/_globals.scss
@@ -8,6 +8,7 @@ html {
   scroll-behavior: smooth;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
 }
 
 body {
